# sky_warriors_ws

./: .gitignore  README.md  Simulation-Report.md  dependencies.repos  pyproject.toml
scripts/: Simulation-Report.md  Task2.sh  check_status.py  disable_auto_disarm.py  land_all.py  launhc_3_x500_walls.sh  takeoff_all.py
src/: Readme.md  launch_classic_3_iris_lz.sh
src/cbba_task_allocator/: README.md
src/cbba_task_allocator/cbba_task_allocator/: assignment_policy.py  cbba_leader_node.py  task_adapter_qr.py  task_executor_node.py
src/failsafes/: README.md
src/failsafes/Docs/: DEVELOPMENT_GUIDE.md  QUICK_REFERENCE.txt  TIMEOUT_FIX.md
src/failsafes/parameters/: failsafe_config.yaml  failsafe_params.yaml
src/failsafes/scripts/: failsafe_manager.py  failsafe_monitor_ros2.py  mavsdkrunner.py  mavsdkrunner_automated.py  test_battery_failsafe.sh  test_datalink_loss.sh  test_failsafe_mavsdk.py  test_gps_failsafe_px4cmd.sh  test_gps_loss.sh  test_rc_loss.sh
src/skyw_bringup/: Readme.md  startup.sh
src/skyw_bringup/world/: skyw_hexagon.sdf  walls.sdf  world.sdf
src/skyw_control/: CMakeLists.txt  README.md  package.xml
src/skyw_control/include/: Arming.hpp  NearestNeighbors.hpp
src/skyw_control/launch/: launch_simulation.py
src/skyw_control/skyw_control/: offboard_helper.py  simulation_node.py
src/skyw_control/src/: Arming.cpp
src/skyw_control/src/SwarmControllers/WeightedTopology/: WeightedTopologyNeighbors.cpp
src/skyw_detection/: Readme.md  sitl_qr_detection_steps.sh
src/skyw_detection/launch/: qr_detection.launch.py
src/skyw_detection/models/qr_competition/: model.config  model.sdf
src/skyw_detection/models/qr_simple/: model.config  model.sdf
src/skyw_detection/skyw_detection/: qrcode_creater.py  qrcode_detecter.py
src/skyw_detection/skyw_detection/launch/: requirements.launch.py
src/skyw_detection/skyw_detection/python/: color_detector_node.py  qr_code_detector_node.py
src/skyw_interfaces/srv/: DispatchDrone.srv
src/skyw_simulation/: Readme.md  cbba_start_tmux.sh  gz_env.sh  gz_harmonic_multi_spawn.sh  idea.md  startup.sh  swarm.sh
src/skyw_simulation/method1/: spawn_multi_drones.sh
src/skyw_simulation/new-method/: 1_start_gazebo.sh  2_spawn_px4_sitl.sh  3_spawn_using_make.sh  README.md  run_on_8gb_ram.sh
src/skyw_simulation/world/: 9001_gz_dronex  Readme.md  multi_lz_classic.world  skyw_multi_lz_world.sdf  warehouse1.sdf
src/skyw_swarm/: CMakeLists.txt  Readme.md  package.xml  startup.sh  swarm.sh
src/skyw_swarm/action/: SetFormation.action  __init__.py  formation_client.py  formation_math.py  formation_server.py  px4_pose_bridge.py
src/skyw_swarm/config/: fastdds.xml
src/skyw_swarm/launch/: single_drone_offboard.launch.py  single_drone_setpoint.launch.py  swarm_behavior.launch.py  swarm_launch.py  swarm_offboard.launch.py
src/skyw_swarm/skyw_swarm/: formation_client.py  formation_math.py  formation_server.py  mission_executor.py  mission_sequencer.py  px4_offboard_bridge.py  px4_pose_bridge.py  single_drone_setpoint.py  swarm_controller.py
src/state_manager/: CMakeLists.txt  Objective.md  README.md  gz_env.sh  package.xml  setup.py  startup.sh
src/state_manager/launch/: state_manager.launch.py  state_manager_detach_demo.launch.py
src/state_manager/params/: state_manager.yaml
src/state_manager/state_manager/: README.md  state_manager_demo_node.py  state_manager_node.py
