[project]
name = "skyw-swarm"
version = "1.0.0"
description = "Crazyflie swarm formation control with ROS2"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # ROS2 Python packages (if using pip-installed versions)
    "empy>=3.3,<4",  # Required for ROS2 message generation
    "catkin-pkg>=1.0.0",  # Required for ROS2 package.xml parsing
    "lark>=1.0.0",  # Required for ROS2 interface parsing
    "transforms3d>=0.4.1",
    "rowan>=1.3.0",
    
    # Crazyflie driver library
    "cflib>=0.1.31",  # Crazyflie Python library
    
    # Visualization (optional)
    "matplotlib>=3.7.0",
    
    # Hungarian algorithm for assignment
    "scikit-learn>=1.3.0",
    
    # Async support
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

sim = [
    "pybullet>=3.2.5",  # For physics simulation
]

visualization = [
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skyw_swarm"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
